--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;500;700&family=Spectral:wght@300&display=swap');
+
+body {
+    font-family: "Spectral" sans-serif;
+}
+
+h1, h2, h3, h4 {
+    font-family: "Karla", sans-serif;
+}
 h1 {
     font-size: 36px;
     line-height: 40px;
     text-transform: uppercase;
     color: #4361ee;
+    font-family: "Karla", sans-serif;
     box-shadow: 
-    inset 0 0 0 1px rgba(53,86,129, 0.4), 
-    inset 0 0 5px rgba(53,86,129, 0.5),
-    inset -285px 0 35px white;
+		inset 0 0 0 1px rgba(53,86,129, 0.4), 
+		inset 0 0 5px rgba(53,86,129, 0.5),
+		inset -285px 0 35px white;
 }
 
 h2 {
@@ -14,6 +24,7 @@ h2 {
     line-height: 40px;
     text-transform: uppercase;
     color: #7209b7;
+    
 }
 
 h3 {
