Add closing css tag

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ h4 {
     line-height: 20px;
     text-transform: uppercase;
     color: #7209b7;
-
+}
 /* Basic Button Style */
 
 .btn , .btn-play {
