--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,18 +18,21 @@ h1 {
     font-size: 36px;
     line-height: 40px;
     text-transform: uppercase;
+    text-align: center;
     color: #4361ee;
     font-family: 'Karla', sans-serif;
-    box-shadow: 
+    /* box-shadow: 
 		inset 0 0 0 1px rgba(53,86,129, 0.4), 
 		inset 0 0 5px rgba(53,86,129, 0.5),
-		inset -285px 0 35px white;
+		inset -285px 0 35px white; */
+        margin-bottom: ;
 }
 
 h2 {
     font-size: 30px;
     line-height: 40px;
     text-transform: uppercase;
+    text-align: center;
     color: #7209b7;
     
 }
@@ -38,6 +41,7 @@ h3 {
     font-size: 24px;
     line-height: 40px;
     text-transform: uppercase;
+    text-align: center;
     color: #4361ee;
 }
 
@@ -49,13 +53,20 @@ h4 {
 }
 /* Basic Button Style */
 
+.btn-wrapper {
+    width: 100%;
+    
+}
+
 .btn , .btn-play {
+    width: 200px;
+    display: block;
     border: 0.16em solid #7209b7;
     border-radius: 1em;
     background-color: #4361ee;
     padding: 14px 28px;
-    margin: auto;
-    font-size: 16px;
+    margin: 30px auto;
+    font-size: 30px;
     font-family: 'Karla' , sans-serif;
     color: #fff;
     text-transform:uppercase;
@@ -64,7 +75,6 @@ h4 {
     text-align: center;
     transition: all 0.2s;
     cursor: pointer;
-    display: inline-block;
   }
 
   /* On mouse-over */
@@ -75,14 +85,14 @@ h4 {
 
 /* play button styles */
 
-.btn-play:hover {
+/* .btn-play:hover {
     text-indent: 30px;
     background: #eee;
     color: #36454F;
     opacity: 2;
-}
+} */
 
-.btn-play {
+/* .btn-play {
     transition: all 0.2s linear 0s;
 }
 
@@ -97,7 +107,9 @@ h4 {
 
 .btn-play:hover:before {
         left: 7px;
-}
+} */
+
+
 
 /* Background Image */
 
