--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,9 @@
 }
 
 body {
+    height: 100vh;
     font-family: "Spectral" sans-serif;
+    background-image: linear-gradient(to bottom right, #A8E6Cf, #DBEDC1, #FED3B6, #FFAAA5, #FF8B94);
 }
 
 h1, h2, h3, h4 {
@@ -19,7 +21,7 @@ h1 {
     line-height: 40px;
     text-transform: uppercase;
     text-align: center;
-    color: #fff;
+    color: #000;
     font-family: 'Karla', sans-serif;
     /* box-shadow: 
 		inset 0 0 0 1px rgba(53,86,129, 0.4), 
@@ -32,7 +34,8 @@ h2 {
     line-height: 40px;
     text-transform: uppercase;
     text-align: center;
-    color: #7209b7;
+    /* color: #7209b7; */
+    color: #000;
 }
 
 h3 {
@@ -40,7 +43,8 @@ h3 {
     line-height: 40px;
     text-transform: uppercase;
     text-align: center;
-    color: #4361ee;
+    /* color: #4361ee; */
+    color: #000;
 }
 
 h4 {
@@ -64,9 +68,11 @@ main {
 .btn , .btn-play {
     width: 260px;
     display: block;
-    border: 0.16em solid #7209b7;
+    /* border: 0.16em solid #7209b7; */
+    border: 0.16em solid #207052;
     border-radius: 1em;
-    background-color: #4361ee;
+    /* background-color: #4361ee; */
+    background-color: #37BF8C;
     padding: 14px 28px;
     margin: 30px auto;
     font-size: 30px;
@@ -83,7 +89,8 @@ main {
   /* On mouse-over */
 .btn:hover {
     background: #eee;
-    color: #36454F;
+    /* color: #36454F; */
+    color: #000;
 }
 
 /* play button styles */
@@ -125,11 +132,10 @@ main {
     display: flex;
     justify-content: space-between;
     padding: 20px;
-    background-color: #4361ee;
 }
 
 .navbar i {
-    color: white;
+    color: #000;
     transition: all 0.25s ease-in-out;
     font-size: 35px;
 }
@@ -150,13 +156,22 @@ main {
     margin: 30px auto;
 }
 
-.game-container .game-screen {
+.game-screen {
     width: 900px;
     height: 700px;
-    background-image: url('../images/Background.png');
+    border-radius: 1em;
+    /* background-image: url('../images/Background.png'); */
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
+}
+
+.game-screen img {
+    width: 900px;
+    height: 636px;
+    border: 6px double #207052;
+    box-shadow: 0 0 5px #000;
+    margin-top: 32px;
 }
 
 .game-controls {
@@ -181,6 +196,7 @@ main {
 .game-controls .instrument-container img {
     width: 150px;
     height: 200px;
+    box-shadow: 0 0 8px #000;
     margin: 0 50px;
     margin-top: 40px;
 }
