Add pop-up images and link to game play JS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,7 +160,7 @@ main {
     width: 900px;
     height: 700px;
     border-radius: 1em;
-    /* background-image: url('../images/Background.png'); */
+    background-image: url('../images/Background.png');
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
@@ -199,6 +199,11 @@ main {
     box-shadow: 0 0 8px #000;
     margin: 0 50px;
     margin-top: 40px;
+    position: absolute;
+}
+
+.invisible {
+    visibility: hidden;
 }
 
 /* Character Clickable Divs */
@@ -210,43 +215,43 @@ main {
     display: inline-block;
 }
 
-#bongo {
+#bongo-click-box {
     position: relative;
     top: 390px;
     left: 100px;
 }
 
-#cello {
+#cello-click-box {
     position: relative;
     top: 235px;
     left: 422px;
 }
 
-#child-sing {
+#child-sing-click-box {
     position: relative;
     top: 341px;
     left: 224px;
 }
 
-#drum {
+#drum-click-box {
     position: relative;
     top: 175px;
     left: 621px;
 }
 
-#flute {
+#flute-click-box {
     position: relative;
     top: 350px;
     left: 330px;
 }
 
-#guitar {
+#guitar-click-box {
     position: relative;
     top: 207px;
     left: 353px;
 }
 
-#piano {
+#piano-click-box {
     position: relative;
     height: 125px;
     width: 70px;
@@ -254,7 +259,7 @@ main {
     left: 440px;
 }
 
-#trombone {
+#trombone-click-box {
     position: relative;
     height: 65px;
     width: 100px;
@@ -262,7 +267,7 @@ main {
     left: 260px;
 }
 
-#violin {
+#violin-click-box {
     position: relative;
     top: 255px;
     right: 280px;
