--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,10 +6,13 @@
     box-sizing: border-box;
 }
 
-body {
+html {
     height: 100vh;
-    font-family: "Spectral" sans-serif;
     background-image: linear-gradient(to bottom right, #A8E6Cf, #DBEDC1, #FED3B6, #FFAAA5, #FF8B94);
+}
+
+body {
+    font-family: "Spectral" sans-serif;
 }
 
 h1, h2, h3, h4 {
@@ -58,11 +61,23 @@ main {
     margin-top: 40px;
 }
 
+.hero-container {
+    width: 60%;
+    height: 500px;
+    display: flex;
+    margin: 20px 0 0 29%;
+}
+
+.hero-image {
+    width: 600px;
+    height: 650px;
+}
+
 /* Basic Button Style */
 
 .btn-wrapper {
     width: 100%;
-    
+    margin-top: 150px;
 }
 
 .btn , .btn-play {
@@ -74,7 +89,7 @@ main {
     /* background-color: #4361ee; */
     background-color: #37BF8C;
     padding: 14px 28px;
-    margin: 30px auto;
+    margin: 30px;
     font-size: 30px;
     font-family: 'Karla' , sans-serif;
     color: #fff;
