--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,12 +8,13 @@
 
 body {
     height: 100vh;
-    font-family: "Spectral" sans-serif;
+    font-family: 'Spectral' sans-serif;
     background-image: linear-gradient(to bottom right, #A8E6Cf, #DBEDC1, #FED3B6, #FFAAA5, #FF8B94);
 }
 
 h1, h2, h3, h4 {
     font-family: "Karla", sans-serif;
+    padding-bottom: 20px;
 }
 
 h1 {
@@ -267,3 +268,45 @@ main {
     top: 255px;
     right: 280px;
 }
+
+/* Modal */
+/* The Modal (background) */
+.modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background: linear-gradient(45.34deg, #E77281 5.66%, #DCEDC1 94.35%);
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #fefefe;
+    color: #36454F;
+    margin: 15% auto;
+    padding: 20px;
+    border: 3px solid #DCEDC1;
+    border-radius: 2em;
+    width: 50%;
+    text-align: center;
+    font-size: 14pt;
+  }
+  
+  /* The Close Button */
+.close {
+    color: #E77281;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #DCEDC1;
+    text-decoration: none;
+    cursor: pointer;
+  }
