Move guitar click box to correct place

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -264,8 +264,8 @@ main {
 
 #guitar-click-box {
     position: relative;
-    top: 207px;
-    left: 353px;
+    top: 100px;
+    right: 190px;
 }
 
 #piano-click-box {
