Edit game modal buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,6 +111,11 @@ main {
     color: #000;
 }
 
+/* Game Modal Buttons */
+.game-btn {
+    display: inline-block;
+}
+
 /* play button styles */
 
 /* .btn-play:hover {
