Add new game background image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,7 +200,7 @@ footer {
     width: 900px;
     height: 700px;
     border-radius: 1em;
-    background-image: url('../images/Background.png');
+    background-image: url('../images/background.webp');
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
